# Forecast

./: .env.example  .gitignore  BUILD_STEPS.md  README.md  alembic.ini  pyproject.toml
Forecastmodel/: forecast_score.py  run_composite.py  run_forecast.py  simulate_composite.py
Webscrape/: callscraperexample.py  quick_scrape.py
alembic/versions/: 0002_category_scores.py  0005_dataset_artifacts.py
backend/langchain/: .env.example  BUILD_STEPS.md  README.md  plan.md  pyproject.toml
backend/langchain/Forecastmodel/: run_composite.py  run_forecast.py
backend/langchain/alembic/: env.py
backend/langchain/alembic/versions/: 0001_initial_schema.py  0003_specialist_agent_scores.py  0004_forecast_storage.py  0006_source_recordings.py
backend/langchain/data/samples/: Fake_Data.csv  healthcare_capacity_sample.csv
backend/langchain/preprocessing/: boundaries.json
backend/langchain/src/forecast/: __init__.py  config.py
backend/langchain/src/forecast/agents/: context_loader.py  data_service.py  fred_mcp.py  specialist_agent.py  summariser.py
backend/langchain/src/forecast/agents/context/: healthcare.md
backend/langchain/src/forecast/api/: __init__.py  datasets.py  ingest.py  scores.py
backend/langchain/src/forecast/db/: models.py
backend/langchain/src/forecast/embeddings/: schemas.py
backend/langchain/src/forecast/forecasting/: service.py
backend/langchain/src/forecast/ingest/: webscrape.py
backend/langchain/src/forecast/scoring/: anchors.py  benchmarks.py  service.py
backend/langchain/src/forecast/scripts/: run_specialist_agents.py  score_dataset.py  test_summary_trace.py
backend/langchain/src/forecast/tasks/: specialists.py
backend/langchain/tests/: test_benchmarks.py  test_central_agent.py  test_chat_api.py  test_classifier_endpoint.py  test_cors.py  test_dataset_repository.py  test_datasets_api.py  test_embedding_service.py  test_ingest_api.py  test_specialist_scores_api.py  test_webscrape.py
backend/mcp/: test_agent_tool_calls.py
data/samples/: Fake_data_better2.csv  transport_mobility_sample.csv
fred-mcp-server-main/: agent_server_guide.md  package-lock.json
fred-mcp-server-main/src/: index.ts
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  terminal-dashboard.tsx
frontend/components/: Dither.d.ts  Dither.jsx  Dither.module.css  forecast-panel.tsx
frontend/components/ui/: badge.tsx  (+3 more)
gmail_email_tool/: README.md  payload.example.json  pyproject.toml
gmail_email_tool/src/gmail_email_tool/: cli.py  idempotency.py  models.py  service.py
gmail_email_tool/state/: sent_emails.json
preprocessing/: process_housing.py
src/forecast/: config.py  main.py
tests/: test_anchors.py  test_benchmarks.py  test_classifier.py  test_context_loader.py  test_data_service.py  test_embedding_service.py  test_forecasting_service.py  test_ingest_api.py  test_pipeline_graph.py  test_scores_api.py  test_specialist_agent.py  test_specialist_scores_api.py  test_specialist_tasks.py  test_summariser.py  test_webscrape.py
(+55 files in other folders)
